--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "cmake.sourceDirectory": "/Users/damitha/work/fun/aoc-asm/2014/day2"
-}
+        "rust-analyzer.cargo.target": "x86_64-apple-darwin",
+        "rust-analyzer.debug.buildBeforeRestart": true
+}    
